<resources>
    <string name="app_name">SMAC Cloud</string>
    <string name="intro_slide1">This is a very long and detailed description about absolutely nothing in particular.</string>
    <string name="first_slide">First Slide</string>
    <string name="second_slide">Second Slide</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="tra_demo">Try a Demo</string>
    <string name="smac_link">Powered by: SMAC Softwares &#38; Services e.K.</string>
    <string name="disable_comment_title">Comment Disable</string>
    <string name="disable_comment_message">Comment is disable in demo mode.</string>
    <string name="disable_like_title">Like Disable</string>
    <string name="disable_like_message"> Like is disable in demo mode.</string>
    <string name="disable_sharing_title"> Sharing Disable</string>
    <string name="disable_sharing_message">Sharing is disable in demo mode.</string>
    <string name="access_denied_title"> Access Denied</string>
    <string name="access_denied_message">Access Denied in demo mode.</string>
    <string name="organization_name">Organization</string>
    <string name="organization_url">Organization URL</string>
    <string name="organization_url_info">Enter your organization URL from greeting email</string>
    <string name="invalid_organization">Invalid Organization</string>
    <string name="Continue">Continue</string>
    <string name="enter_Organization_name">Enter Organization Name</string>
    <string name="u_name">Name</string>
    <string name="address">Address</string>
    <string name="contact">Contact No</string>
    <string name="mobileNo">Mobile No</string>
    <string name="designation">Designation</string>
    <string name="occupation">Occupation</string>
    <string name="Professional_field">Professional field</string>
    <string name="company_size">Company Size</string>
    <string name="work_email_address">Work email address</string>
    <string name="enter_email">Enter Email</string>
    <string name="newsLetters">Newsletters?</string>
    <string name="select_country">select country</string>
    <string name="start_demo">Start Demo</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_occupation">Enter Occupation</string>
    <string name="enter_company_type">Enter Company Type</string>
    <string name="enter_employee_strength">Enter Employee Strength</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="invalid_email">Invalid email</string>
    <string name="name_validation">Enter UserName</string>
    <string name="emailid_validation">Enter Email Id</string>
    <string name="address_validation">Enter Address</string>
    <string name="contact_validation">Enter contactNo</string>
    <string name="mobileno_validation">Enter MobileNo</string>
    <string name="contactNo_validation">Enter ContactNo</string>
    <string name="oragnization_validation">Enter Organization</string>
    <string name="password_validation">Enter password</string>
    <string name="confirm_password_validation">Enter confirmPassword</string>
    <string name="invalidMobileNo_validation">Mobile number should be 10 to 15 character long.</string>
    <string name="password_spacial_character_validation">Password must be 8 characters long and at least one letter, one special character and one number.</string>
    <string name="hint_email">Email Id</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="please_select_first">Please Select First</string>
    <string name="enter_password">Enter Password</string>
    <string name="help_login">Need help logging in?</string>
    <string name="email_sent_successfully">Email Sent Successfully</string>
    <string name="password_length_message">Please Enter at least 6 character in password</string>
    <string name="recognizing_and_sending_mail">Recognizing and sending mail…</string>
    <string name="authentication">Authentication</string>
    <string name="sync">Synchronize your data </string>
    <string name="sync_sub_title_select_download">Select your download criteria</string>
    <string name="switch_views">Switch Views</string>
    <string name="download_option">Download Options</string>
    <string name="sync_data">Synchronizing your data</string>
    <string name="text_full_download">Full Download</string>
    <string name="auto_download_hint">You files are downloading automatically in your device!</string>
    <string name="download_on_demand_hint">Your files are not downloading automatically! You have to download it manually!</string>
    <string name="download_everything_now">Download everything now</string>
    <string name="download_on_demand">Download on Demand</string>
    <string name="label_auto_download">Auto Download</string>
    <string name="download_on_tap">Download on tap</string>
    <string name="download_file_contains">Download  file contains</string>
    <string name="download">Download</string>
    <string name="text_quick_download">Quick Download</string>
    <string name="text_info_full_download">YMay take a long time if there a lot of content</string>
    <string name="text_info_quick_download">You can sync your data and download files manually</string>
    <string name="all_download">All Download</string>
    <string name="battery_low_message">Battery low, first charge it</string>
    <string name="no_available_space_message">No available space to download the content.</string>
    <string name="app_title">SMAC</string>
    <string name="download_message">Do you want to download</string>
    <string name="download_message1">of data your Device?</string>
    <string name="download_message2">Available memory</string>
    <string name="msg_please_wait_while_sync">Please wait while synchronize</string>
    <string name="gcm_sender_id">645815223505</string>
    <string name="current_password">Current Password</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_change">Change</string>
    <string name="current_password_validation_message"> Enter current Password</string>
    <string name="new_password_validation_message">Enter New Password</string>
    <string name="confirm_password_validation_message">Enter Confirm Password</string>
    <string name="password_mismatch_validation_message">Password does not match the confirm password.</string>
    <string name="enter_old_password">Old Password</string>
    <string name="enter_New_password">New Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="change_password">your password has been changed successfully</string>
    <string name="change_password_database_message">Email address is not available in database</string>
    <string name="version">Version:</string>
    <string name="version_no">Version</string>
    <string name="na">N/A</string>
    <string name="copyright">CopyRight ©</string>
    <string name="copyright1">SMAC Software &#38; Services e.K.All Rights Reserved.</string>
    <string name="plan">Plan:</string>
    <string name="licence">Licence:</string>
    <string name="smac_title">SMAC Cloud-2017</string>
    <string-array name="arr_menu_names">
        <item>Info</item>
        <item>Like</item>
        <item>Comment</item>
        <item>Share</item>
        <item>Delete From Device</item>
    </string-array>
    <string-array name="arr_lang_names">
        <item>English</item>
        <item>German</item>
    </string-array>
    <string name="image">Images</string>
    <string name="pdf">Documents</string>
    <string name="audio">Audio</string>
    <string name="video">Videos</string>
    <string name="label_sort">Sort</string>
    <string name="label_filter">Filter</string>
    <string name="channels">Channels</string>
    <string name="announcements">Announcements</string>
    <string name="activities">Recent</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="lable_sign_out">Sign Out</string>
    <string name="sign_out_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="label_medias">Media(s)</string>
    <string name="channel_name">Channel</string>
    <string name="created_by">Created by</string>
    <string name="shared_by">Shared by:</string>
    <string name="date">Date:</string>
    <string name="users">user(s)</string>
    <string name="label_delete_dialog">Warning</string>
    <string name="label_download_first_dialog">Please download first...</string>
    <string name="label_done">Done</string>
    <string name="try_again_downloading">Please try again for downloading</string>
    <string name="msg_re_login">Please re-login</string>
    <string name="msg_enter_to_address">To recipent[s] missing</string>
    <string name="msg_enter_subject">Please enter subject</string>
    <string name="msg_select_media_for_share">Please select file[s]</string>
    <string name="msg_invalid_email">Invalid email address(s)</string>
    <string name="msg_email_send">Email send successfully</string>
    <string name="title_send_via">How do you want to send this mail</string>
    <string name="text_send_as_url">Send as URL</string>
    <string name="text_send_as_attachment">Send as attachment</string>
    <string name="share_via">Share via</string>
    <string name="msg_please_wait">Please wait..</string>
    <string name="msg_please_check_your_connection">Please check your connection</string>
    <string name="msg_network_connection_not_available">Network connection not available</string>
    <string name="msg_cannot_get_response_from_server">Cannot get response from server</string>
    <string name="msg_please_check_your_email">Please Check Your E-mail</string>
    <string name="msg_sure_want_to_leave">Sure want to leave?</string>
    <string name="msg_invalid_response_from_server">Unknow error please contact your admin department.</string>
    <string name="msg_please_try_again_later">Please try again later</string>
    <string name="msg_cannot_complete_request">Cannot complete request.Please try again later</string>
    <string name="msg_downloading_already_in_progress">Downloading Already In Progress</string>
    <string name="msg_downloading_in_progress">Downloading In Progress</string>
    <string name="msg_it_already_like_by_you">It\'s already like by you</string>
    <string name="msg_like_done_please_sync">Like done Please Sync for the latest Update</string>
    <string name="msg_like_by">Like by</string>
    <string name="msg_comment_by">Comment by</string>
    <string name="msg_please_enter_comment">Please enter Comment</string>
    <string name="msg_click_to_delete">click on Delete</string>
    <string name="msg_data_sync">Data sync</string>
    <string name="download_file_first">Please download file first!!!</string>
    <string name="text_transition_animation_app_logo">appLogo</string>
    <string name="text_transition_animation_app_title">appTitle</string>
    <string name="text_transition_animation_channel_title">channelTitle</string>
    <string name="text_transition_animation_media_title">mediaTitle</string>
    <string name="text_transition_animation_media_image">mediaImage</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_storage">Storage</string>
    <string name="label_total_disk_space">Total Disk Space</string>
    <string name="label_used_disk_space">Used</string>
    <string name="label_free_disk_space">Available </string>
    <string name="label_used">Used</string>
    <string name="label_images">Images</string>
    <string name="label_videos">Videos</string>
    <string name="label_documents">Documents</string>
    <string name="label_byte">00 Byte</string>
</resources>