<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal"
              android:background="@color/transparent"
              android:orientation="vertical"
              android:padding="@dimen/padding_very_small">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/slt_as_ios7_other_bt_top"
            android:gravity="center"
            android:text="@string/title_send_via"
            android:textSize="@dimen/title_medium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/btn_send_via_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/slt_as_ios7_other_bt_middle"
            android:gravity="center"
            android:text="@string/text_send_as_url"
            android:textColor="@color/blue_link"
            android:textSize="@dimen/title_large"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/btn_send_via_attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/slt_as_ios7_other_bt_bottom"
            android:gravity="center"
            android:text="@string/text_send_as_attachment"
            android:textColor="@color/blue_link"
            android:textSize="@dimen/title_large"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_small"
        android:background="@drawable/slt_as_ios7_cancel_bt"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/label_cancel"
        android:textColor="@color/blue_link"
        android:textSize="@dimen/title_large"
        android:textStyle="bold"/>

</LinearLayout>