<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/parentLayout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_color"
              android:orientation="vertical">

    <include layout="@layout/partial_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_extra_large"
            android:gravity="center_horizontal"
            android:padding="@dimen/padding_extra_large"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="@dimen/title_large"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="@dimen/hundred_fifty_dp"
            android:layout_height="@dimen/hundred_fifty_dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/thirty_five_dp"
            android:src="@drawable/ic_logo"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/txt_release_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/version"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_medium"/>

                <TextView
                    android:id="@+id/txt_release_no_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:layout_weight="50"
                    android:text="@string/version_no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_medium"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView

                    android:id="@+id/txt_licence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/licence"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_medium"/>

                <TextView
                    android:id="@+id/txt_licence_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:layout_weight="50"
                    android:text="@string/na"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_medium"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_medium"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView

                    android:id="@+id/txt_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:gravity="right"
                    android:text="@string/plan"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_medium"/>

                <TextView
                    android:id="@+id/txt_plan_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:layout_weight="50"
                    android:text="@string/na"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_medium"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_app_name_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smac_title"
                    android:textColor="@color/red"
                    android:textSize="@dimen/title_small"
                    android:textStyle="bold"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_copyRights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_ultra_small"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

