<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/parentLayout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/partial_toolbar"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_medium"
                android:layout_marginTop="@dimen/padding_extra_large"
                android:padding="@dimen/padding_very_small"
                android:text="@string/label_storage"
                android:textSize="@dimen/title_medium"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_very_small"
                android:layout_marginRight="@dimen/padding_very_small"
                android:background="@drawable/border_background"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_total_disk_space"/>

                    <TextView
                        android:id="@+id/textTotalDiskSpace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/padding_very_small"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_used_disk_space"
                        android:textSize="@dimen/title_very_small"/>

                    <TextView
                        android:id="@+id/textUsedDiskSpace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/padding_very_small"
                        android:textSize="@dimen/title_very_small"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:background="@color/Gray57"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_free_disk_space"
                        android:textSize="@dimen/title_very_small"/>

                    <TextView
                        android:id="@+id/textFreeSpace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/padding_very_small"
                        android:textSize="@dimen/title_very_small"/>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_medium"
                    android:layout_marginTop="@dimen/padding_extra_large"
                    android:padding="@dimen/padding_very_small"
                    android:text="@string/label_used"
                    android:textSize="@dimen/title_medium"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_very_small"
                    android:layout_marginRight="@dimen/padding_very_small"
                    android:background="@drawable/border_background"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_very_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_images"
                            android:textSize="@dimen/title_very_small"/>

                        <TextView
                            android:id="@+id/textImagesMemorySize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/padding_very_small"
                            android:text="@string/label_byte"
                            android:textSize="@dimen/title_very_small"/>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="@dimen/padding_small"
                        android:background="@color/Gray57"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_videos"
                            android:textSize="@dimen/title_very_small"/>

                        <TextView
                            android:id="@+id/textVideosMemorySize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/padding_very_small"
                            android:text="@string/label_byte"
                            android:textSize="@dimen/title_very_small"/>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="@dimen/padding_small"
                        android:background="@color/Gray57"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/audio"
                            android:textSize="@dimen/title_very_small"/>

                        <TextView
                            android:id="@+id/textAudiosMemorySize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/padding_very_small"
                            android:text="@string/label_byte"
                            android:textSize="@dimen/title_very_small"/>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="@dimen/padding_small"
                        android:background="@color/Gray57"/>


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_documents"
                            android:textSize="@dimen/title_very_small"/>

                        <TextView
                            android:id="@+id/textDocumentsMemorySize"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="@dimen/padding_very_small"
                            android:text="@string/label_byte"
                            android:textSize="@dimen/title_very_small"/>
                    </RelativeLayout>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>